redis/redis-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis-ingress
  namespace: redis
spec:
  entryPoints:
    - redis
  routes:
    - match: HostSNI(`*`)
      middlewares:
        - name: vpn-tcp-ipwhitelist
          namespace: default
      services:
        - name: redis
          port: 6379
